--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,9 @@ body {
 .display-none {
   display: none;
 }
+.add-character {
+  padding: 8px;
+  text-align: center;
+  background-color: #eeeeee;
+  cursor: pointer;
+}
