valid mention regex

--- a/src/index.css
+++ b/src/index.css
@@ -11,13 +11,14 @@ body {
 }
 
 .typeahead {
+  width: 200px;
   margin: 0;
   padding: 0;
   border: 1px solid #ccc;
   background: white;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, .1), 0 1px 10px rgba(0, 0, 0, .35);
   border-radius: 3px;
-  list-style-type: none
+  list-style-type: none;
 }
 .person {
   margin: 0;
