update placeholder && fix stackmode mention

--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,8 @@ body {
   background-color: #eeeeee;
   cursor: pointer;
 }
+.DraftEditor-root [id^="placeholder-"] {
+  font-family: Courier;
+  font-weight: bold;
+  font-size: 13px;
+}
