--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
-html {
-
-}
-
 body {
   margin: 0;
   padding: 0;
@@ -72,7 +68,7 @@ body {
   left: 0;
   top: 0;
   width: 300px;
-  height: 100px;
+  /*height: 100px;*/
   border-radius: 2px;
   color: black;
   overflow: hidden;
@@ -94,4 +90,19 @@ body {
   font-family: Courier;
   font-weight: bold;
   font-size: 13px;
+}
+.character-information-1 {
+  display: flex;
+  align-items: flex-start;
+}
+.character-information-1 .character-img {
+  width: 100px;
+  margin-left: 10px;
+}
+.character-information-1 .character-img img {
+  max-width: 100%;
+}
+.character-information-1 .character-data {
+  width: 190px;
+  font-size: 12px;
 }
