--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,6 @@ body {
 }
 .character-details {
   position: absolute;
-  left: 0;
   top: 0;
   width: 300px;
   /*height: 100px;*/
@@ -97,7 +96,7 @@ body {
 }
 .character-information-1 .character-img {
   width: 100px;
-  margin-left: 10px;
+  margin-right: 10px;
 }
 .character-information-1 .character-img img {
   max-width: 100%;
