--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,10 @@
   /*background-color: white;*/
 }
 .typeahead {
-  border: 1px solid #ccc;
+  border: 1px solid #eee;
   background: white;
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, .1), 0 1px 10px rgba(0, 0, 0, .35);
-  border-radius: 3px;
+  box-shadow: 0px 4px 30px 0px rgba(220,220,220,1);
+  border-radius: 2px;
   z-index: 2;
   font-family: Arial;
 }
@@ -18,7 +18,7 @@
   /*max-height: 250px;*/
   /*overflow-y: auto;*/
   margin: 0;
-  padding: 8px 0 0 0 ;
+  padding: 8px 0 ;
   list-style-type: none;
   /*background: white;*/
 }
@@ -71,7 +71,9 @@
   border-radius: 2px;
   color: black;
   overflow: hidden;
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, .1), 0 1px 10px rgba(0, 0, 0, .35);
+  /*box-shadow: 0 0 0 1px rgba(0, 0, 0, .1), 0 1px 10px rgba(0, 0, 0, .35);*/
+  box-shadow: 0px 4px 30px 0px rgba(220,220,220,1);
+  border: 1px solid #eee;
   z-index: 99;
   background-color: white;
   /*cursor: default;*/
